--- a/authorsApiConfig/src/main/resources/application.properties
+++ b/authorsApiConfig/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+server.port=3000
+spring.application.name=ConfigServer
 
+#Link to github repo with config details
+spring.cloud.config.server.git.uri=https://github.com/Nzibosco/authorsApiConfig.git
