adding Eureka server

--- a/authorsApiConfig/src/main/resources/application.properties
+++ b/authorsApiConfig/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=3000
-spring.application.name=ConfigServer
+spring.application.name=AuthorsApiConfig
 
 #Link to github repo with config details
-spring.cloud.config.server.git.uri=https://github.com/Nzibosco/authorsApiConfig.git
+spring.cloud.config.server.git.uri=https://github.com/Nzibosco/AuthorsApiConfig.git
+
