--- a/authorsMS/src/main/resources/application.properties
+++ b/authorsMS/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.application.name=AuthorsMS
 server.port=4000
+#server.servlet.contextPath=/authorMS
+
+#provisional link for eureka. Will be moved to the config server git repo later in the process
+eureka.client.service-url.defaultZone=http://localhost:2000/eureka
