--- a/likeMS/src/main/resources/application.properties
+++ b/likeMS/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=LikesMS
 server.port=6000
 
+#provisional link for eureka. Will be moved to the config server git repo later in the process
+eureka.client.service-url.defaultZone=http://localhost:2000/eureka
 
