--- a/quotesMS/src/main/resources/application.properties
+++ b/quotesMS/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=QuotesMS
 server.port=5000
+
+#provisional link for eureka. Will be moved to the config server git repo later in the process
+eureka.client.service-url.defaultZone=http://localhost:2000/eureka
