--- a/commentMS/src/main/resources/application.properties
+++ b/commentMS/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=CommentsMS
 server.port=7000
 
+#provisional link for eureka. Will be moved to the config server git repo later in the process
+eureka.client.service-url.defaultZone=http://localhost:2000/eureka
