accessing MS through Eureka

--- a/quotesMS/src/main/resources/application.properties
+++ b/quotesMS/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=QuotesMS
-server.port=5000
+
+#server.port=5000
+#Making the port number of QuoteMS random. This MS will then be accessible throrugh Eureka! 
+server.port=${PORT:${SERVER_PORT:0}}
 
 #provisional link for eureka. Will be moved to the config server git repo later in the process
 eureka.client.service-url.defaultZone=http://localhost:2000/eureka
