Adding gateway Zuul

--- a/authorsApiEureka/pom.xml
+++ b/authorsApiEureka/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.bosco</groupId>
-	<artifactId>ApiConfig</artifactId>
+	<artifactId>authorsApiEureka</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ApiConfig</name>
-	<description>Configuration application for all authorsApp microservices </description>
+	<name>authorsApiEureka</name>
+	<description>Eureka Service for AuthorsApp Microservices</description>
 	<properties>
 		<java.version>11</java.version>
 		<spring-cloud.version>2020.0.1</spring-cloud.version>
@@ -20,7 +20,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-config</artifactId>
+			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
 		</dependency>
 
 		<dependency>
