more readable variable

--- a/authorsApiZuul/src/main/resources/application.properties
+++ b/authorsApiZuul/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port=1000
+spring.application.name=ZuulServer
 
+zuul.routes.author.path=/authors/**
+zuul.routes.author.service-id=AuthorMS
+
+
+#provisional link for eureka. Will be moved to the config server git repo later in the process
+eureka.client.service-url.defaultZone=http://localhost:2000/eureka
